<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:gravity="center"
    tools:context="${packageName}.${activityClass}" >

    <Button
        android:id="@+id/button_play"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/bg_button"
        android:text="@string/menu_play_btn"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_registrazione"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_above="@+id/button_play"
        android:layout_toLeftOf="@+id/button_play"
        android:background="@drawable/bg_button"
        android:text="@string/menu_registrati_btn"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_alignBottom="@+id/button_registrazione"
        android:layout_toRightOf="@+id/button_play"
        android:background="@drawable/bg_button"
        android:text="@string/menu_exit_btn"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_web"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/button_exit"
        android:layout_below="@+id/button_play"
        android:background="@drawable/bg_button"
        android:text="Tutorial"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_classifica"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_below="@+id/button_play"
        android:layout_toLeftOf="@+id/button_play"
        android:background="@drawable/bg_button"
        android:text="@string/menu_stats_btn"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/button_play"
        android:src="@drawable/cloud_small" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_exit"
        android:layout_centerHorizontal="true"
        android:text="BouncyRun"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/ImageView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_play"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/button_registrazione"
        android:src="@drawable/cloud_small" />

</RelativeLayout>
